--- a/TorboFile/View/Controls/MainViews/CustomSearch.xaml
+++ b/TorboFile/View/Controls/MainViews/CustomSearch.xaml
@@ -167,14 +167,10 @@
 
 				<DockPanel LastChildFill="False">
 
-					<StackPanel Name="searchSettingsPanel" DockPanel.Dock="Top">
-						<CheckBox Name="chkRecursive" Content="Recursive Search"
-								  ToolTip="Search all subfolders of the main search folder" />
-						
-					</StackPanel>
 
-					<StackPanel DockPanel.Dock="Top" Name="buttonPanel" Orientation="Horizontal" HorizontalAlignment="Left"
-					Grid.Row="1">
+
+					<StackPanel DockPanel.Dock="Top" Name="buttonPanel" Orientation="Horizontal" HorizontalAlignment="Left">
+						
 						<Button Name="btnSave" Style="{StaticResource StdButton}" Content="SAVE SEARCH"
 				Command="{Binding CmdSaveOperation}"/>
 						<Button Name="btnLoad" Style="{StaticResource StdButton}" Content="LOAD SEARCH"
@@ -185,6 +181,20 @@
 						</Button>
 					</StackPanel>
 
+					<StackPanel Name="searchSettingsPanel" DockPanel.Dock="Top">
+						<CheckBox Name="chkRecursive" Content="Recursive Search" IsChecked="{Binding  Path=BuildSearchVM.Recursive}"
+								  ToolTip="Search all subfolders of the main search folder" />
+						<CheckBox Name="chkAutoRun" Content="AutoRun Actions" IsChecked="{Binding Path=BuildSearchVM.AutoRun}"
+						  ToolTip="Run actions immediately on all matched files. WARNING: You will not be able to review the files beforehand." />
+
+						<Button x:Name="BtnDirectory" Style="{StaticResource StdButton}" MaxHeight="28" Command="{Binding CmdPickDirectory}">
+							<Image Source="/TorboFile;component/assets/images/folder-yellow_open.png"/>
+						</Button>
+						<TextBox Style="{StaticResource TextInputTemplate}" Name="fldDirectory"
+									 Text="{Binding SearchDirectory, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" />
+
+					</StackPanel>
+					
 					<ScrollViewer DockPanel.Dock="Top" VerticalScrollBarVisibility="Auto"
 								  DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=DataContext.BuildSearchVM}">
 						<DockPanel>
@@ -217,11 +227,15 @@
 							   DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=DataContext.RunSearchVM}">
 
 						<StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
+
+							<StackPanel Name="pickFolderPanel" Orientation="Horizontal" DataContext="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=DataContext}">
 							<Button x:Name="BtnDirectory" Style="{StaticResource StdButton}" MaxHeight="28" Command="{Binding CmdPickDirectory}">
 								<Image Source="/TorboFile;component/assets/images/folder-yellow_open.png"/>
 							</Button>
 							<TextBox Style="{StaticResource TextInputTemplate}" Name="fldDirectory"
 									 Text="{Binding SearchDirectory, ValidatesOnExceptions=True, UpdateSourceTrigger=PropertyChanged}" />
+							</StackPanel>
+							
 							<Button Name="btnRunSearch" Style="{StaticResource StdButton}" MaxHeight="32" Command="{Binding CmdRunSearch}">
 								RUN SEARCH
 							</Button>
